--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
 <!-- End paper abstract -->
 
 
-<!-- Image carousel -->
+<!-- framework -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
+        <img src="static/img_framework/fw.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           First image description.
         </h2>
