--- a/index.html
+++ b/index.html
@@ -208,9 +208,42 @@
 <!-- End image carousel -->
 
 
+<!-- Defense Visualization on Carla -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+        <h2 class="title is-3 has-text-centered">Defense Visualization in Carla</h2>
+
+       <div class="item">
+        <!-- Your image here -->
+        <img src="static/vis/carla-ori.png" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          Vanilla UniAD under clean conditions in Carla.
+        </h2>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/vis/carla-attack.png" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          Vanilla UniAD after attack in Carla.
+        </h2>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/vis/carla-defense.png" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          MA2T trained UniAD after attack in Carla.
+       </h2>
+     </div>
+  </div>
+</div>
+</div>
+</section>
+<!-- End image carousel -->
 
 
-<!-- Youtube video -->
+<!-- exp results -->
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
