rm carousel class

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
+      <div id="results-carousel" >
         <h2 class="title is-3 has-text-centered">Defense Visualization on nuScenes</h2>
 
        <div class="item">
@@ -212,7 +212,7 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
+      <div id="results-carousel">
         <h2 class="title is-3 has-text-centered">Defense Visualization in Carla</h2>
 
        <div class="item">
@@ -247,7 +247,7 @@
 <section class="hero is-small"></section>
   <div class="hero-body">
     <div class="container is-max-desktop">
-      <div id="results-carousel" class="carousel results-carousel">
+      <div id="results-carousel">
         <h2 class="title is-3 has-text-centered">Experimental Results</h2>
         
         <!--uniad white-->
