--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
   <script src="static/js/bulma-carousel.min.js"></script>
   <script src="static/js/bulma-slider.min.js"></script>
   <script src="static/js/index.js"></script>
+
+  <style>
+    .center-image {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    </style>
 </head>
 <body>
 
@@ -146,7 +154,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <!-- Your image here -->
-      <img src="static/img_framework/fw.png" alt="MY ALT TEXT"/>
+      <img src="static/img_framework/fw.png" alt="MY ALT TEXT" class="center-image"/>
       <h2 class="subtitle has-text-centered">
         The framework of MA2T. 
       </h2>
@@ -182,21 +190,21 @@
 
        <div class="item">
         <!-- Your image here -->
-        <img src="static/vis/ori.png" alt="MY ALT TEXT"/>
+        <img src="static/vis/ori.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           Vanilla UniAD under clean conditions on nuScenes.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/vis/attack.png" alt="MY ALT TEXT"/>
+        <img src="static/vis/attack.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           Vanilla UniAD after attack on nuScenes.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/vis/defense.png" alt="MY ALT TEXT"/>
+        <img src="static/vis/defense.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           MA2T trained UniAD after attack on nuScenes.
        </h2>
@@ -217,21 +225,21 @@
 
        <div class="item">
         <!-- Your image here -->
-        <img src="static/vis/carla-ori.png" alt="MY ALT TEXT"/>
+        <img src="static/vis/carla-ori.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           Vanilla UniAD under clean conditions in Carla.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/vis/carla-attack.png" alt="MY ALT TEXT"/>
+        <img src="static/vis/carla-attack.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           Vanilla UniAD after attack in Carla.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/vis/carla-defense.png" alt="MY ALT TEXT"/>
+        <img src="static/vis/carla-defense.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           MA2T trained UniAD after attack in Carla.
        </h2>
@@ -255,35 +263,35 @@
         <h3 class="title is-4 has-text-centered"><strong>UniAD's</strong> Defense Results under <strong>White-box</strong> Settings </h3>
        <div class="item">
         <!-- Your image here -->
-        <img src="static/exp/table-uniad-track-white.png" alt="MY ALT TEXT"/>
+        <img src="static/exp/table-uniad-track-white.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           Track | AMOTA (↑).
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/exp/table-uniad-map-white.png" alt="MY ALT TEXT"/>
+        <img src="static/exp/table-uniad-map-white.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           Map | IOU (↑).
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/exp/table-uniad-motion-white.png" alt="MY ALT TEXT"/>
+        <img src="static/exp/table-uniad-motion-white.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           Motion | minADE (↓).
        </h2>
      </div>
      <div class="item">
       <!-- Your image here -->
-      <img src="static/exp/table-uniad-occ-white.png" alt="MY ALT TEXT"/>
+      <img src="static/exp/table-uniad-occ-white.png" alt="MY ALT TEXT" class="center-image"/>
       <h2 class="subtitle has-text-centered">
         Occupancy | IOU (↑).
      </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/exp/table-uniad-plan-white.png" alt="MY ALT TEXT"/>
+        <img src="static/exp/table-uniad-plan-white.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           Plan | avg. L2 Error (↓).
        </h2>
@@ -294,35 +302,35 @@
       <h3 class="title is-4 has-text-centered"><strong>UniAD's</strong> Defense Results under <strong>Black-box</strong> Settings </h3>
        <div class="item">
         <!-- Your image here -->
-        <img src="static/exp/table-uniad-track-black.png" alt="MY ALT TEXT"/>
+        <img src="static/exp/table-uniad-track-black.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           Track | AMOTA (↑).
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/exp/table-uniad-map-black.png" alt="MY ALT TEXT"/>
+        <img src="static/exp/table-uniad-map-black.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           Map | IOU (↑).
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/exp/table-uniad-motion-black.png" alt="MY ALT TEXT"/>
+        <img src="static/exp/table-uniad-motion-black.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           Motion | minADE (↓).
        </h2>
      </div>
      <div class="item">
       <!-- Your image here -->
-      <img src="static/exp/table-uniad-occ-black.png" alt="MY ALT TEXT"/>
+      <img src="static/exp/table-uniad-occ-black.png" alt="MY ALT TEXT" class="center-image"/>
       <h2 class="subtitle has-text-centered">
         Occupancy | IOU (↑).
      </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/exp/table-uniad-plan-black.png" alt="MY ALT TEXT"/>
+        <img src="static/exp/table-uniad-plan-black.png" alt="MY ALT TEXT" class="center-image"/>
         <h2 class="subtitle has-text-centered">
           Plan | avg. L2 Error (↓).
        </h2>
@@ -333,28 +341,28 @@
                 <h3 class="title is-4 has-text-centered"><strong>VAD's</strong> Defense Results under <strong>White-box</strong> Settings </h3>
                 <div class="item">
                  <!-- Your image here -->
-                 <img src="static/exp/table-vad-detection-white.png" alt="MY ALT TEXT"/>
+                 <img src="static/exp/table-vad-detection-white.png" alt="MY ALT TEXT" class="center-image"/>
                  <h2 class="subtitle has-text-centered">
                    Detection | mAP (↑).
                  </h2>
                </div>
                <div class="item">
                  <!-- Your image here -->
-                 <img src="static/exp/table-vad-map-white.png" alt="MY ALT TEXT"/>
+                 <img src="static/exp/table-vad-map-white.png" alt="MY ALT TEXT" class="center-image"/>
                  <h2 class="subtitle has-text-centered">
                    Map | mAP(↑).
                  </h2>
                </div>
                <div class="item">
                  <!-- Your image here -->
-                 <img src="static/exp/table-vad-motion-white.png" alt="MY ALT TEXT"/>
+                 <img src="static/exp/table-vad-motion-white.png" alt="MY ALT TEXT" class="center-image"/>
                  <h2 class="subtitle has-text-centered">
                    Motion | minADE (↓).
                 </h2>
               </div>
                <div class="item">
                  <!-- Your image here -->
-                 <img src="static/exp/table-vad-plan-white.png" alt="MY ALT TEXT"/>
+                 <img src="static/exp/table-vad-plan-white.png" alt="MY ALT TEXT" class="center-image"/>
                  <h2 class="subtitle has-text-centered">
                    Plan | avg. L2 Error (↓).
                 </h2>
@@ -365,28 +373,28 @@
                <h3 class="title is-4 has-text-centered"><strong>VAD's</strong> Defense Results under <strong>Black-box</strong> Settings </h3>
                 <div class="item">
                  <!-- Your image here -->
-                 <img src="static/exp/table-vad-detection-black.png" alt="MY ALT TEXT"/>
+                 <img src="static/exp/table-vad-detection-black.png" alt="MY ALT TEXT" class="center-image"/>
                  <h2 class="subtitle has-text-centered">
                    Detection | mAP (↑).
                  </h2>
                </div>
                <div class="item">
                  <!-- Your image here -->
-                 <img src="static/exp/table-vad-map-black.png" alt="MY ALT TEXT"/>
+                 <img src="static/exp/table-vad-map-black.png" alt="MY ALT TEXT" class="center-image"/>
                  <h2 class="subtitle has-text-centered">
                    Map | mAP (↑).
                  </h2>
                </div>
                <div class="item">
                  <!-- Your image here -->
-                 <img src="static/exp/table-vad-motion-black.png" alt="MY ALT TEXT"/>
+                 <img src="static/exp/table-vad-motion-black.png" alt="MY ALT TEXT" class="center-image"/>
                  <h2 class="subtitle has-text-centered">
                    Motion | minADE (↓).
                 </h2>
               </div>
                <div class="item">
                  <!-- Your image here -->
-                 <img src="static/exp/table-vad-plan-black.png" alt="MY ALT TEXT"/>
+                 <img src="static/exp/table-vad-plan-black.png" alt="MY ALT TEXT" class="center-image"/>
                  <h2 class="subtitle has-text-centered">
                    Plan | avg. L2 Error (↓).
                 </h2>
