--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="publication-links">
                 <!-- Arxiv PDF link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                  <a href="https://arxiv.org/pdf/2409.07321" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -135,7 +135,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                  <a href="https://arxiv.org/abs/2409.07321" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -448,7 +448,7 @@
   <!-- End image carousel -->
 
   <!-- Paper poster -->
-  <section class="hero is-small is-light">
+  <!-- <section class="hero is-small is-light">
     <div class="hero-body">
       <div class="container">
         <h2 class="title">Poster</h2>
@@ -458,7 +458,7 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
   <!--End paper poster -->
 
 
@@ -466,7 +466,12 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@article{zhang2024module,
+        title={Module-wise Adaptive Adversarial Training for End-to-end Autonomous Driving},
+        author={Zhang, Tianyuan and Wang, Lu and Kang, Jiaqi and Zhang, Xinwei and Liang, Siyuan and Chen, Yuwei and Liu, Aishan and Liu, Xianglong},
+        journal={arXiv preprint arXiv:2409.07321},
+        year={2024}
+      }</code></pre>
     </div>
   </section>
   <!--End BibTex citation -->
